@file:OptIn(ExperimentalSharedTransitionApi::class)

package com.example.chesstats.presentation.leaderboardScreen

import android.widget.Toast
import androidx.activity.compose.BackHandler
import androidx.compose.animation.AnimatedVisibilityScope
import androidx.compose.animation.ExperimentalSharedTransitionApi
import androidx.compose.animation.SharedTransitionScope
import androidx.compose.animation.animateColorAsState
import androidx.compose.animation.animateContentSize
import androidx.compose.animation.core.EaseInQuad
import androidx.compose.animation.core.tween
import androidx.compose.foundation.background
import androidx.compose.foundation.border
import androidx.compose.foundation.clickable
import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Row
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.size
import androidx.compose.foundation.lazy.LazyColumn
import androidx.compose.foundation.lazy.items
import androidx.compose.foundation.shape.CircleShape
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.Tab
import androidx.compose.material3.TabRow
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.runtime.LaunchedEffect
import androidx.compose.runtime.getValue
import androidx.compose.runtime.mutableIntStateOf
import androidx.compose.runtime.remember
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.draw.clip
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.lifecycle.compose.collectAsStateWithLifecycle
import androidx.navigation.NavController
import coil3.compose.AsyncImage
import com.example.chesstats.R
import com.example.chesstats.data.models.ProfileDataModel
import com.example.chesstats.presentation.extras.ChargeScreen
import com.example.chesstats.presentation.extras.DetailPlayerScreenNav
import com.example.chesstats.presentation.extras.EditSpacer


@Composable
fun LeaderBoardScreen(
    leaderBoardViewModel: LeaderBoardViewModel,
    controller: NavController,
    animatedVisibilityScope: AnimatedVisibilityScope,
    sharedTransitionScope: SharedTransitionScope
) {

    val context = LocalContext.current

    val leaderboard by leaderBoardViewModel.leaderBoardLists.collectAsStateWithLifecycle()

    val loading by leaderBoardViewModel.loading.collectAsStateWithLifecycle()

    val error by leaderBoardViewModel.error.collectAsStateWithLifecycle()

    val tabs = listOf<String>(
        stringResource(R.string.blitz_str),
        stringResource(R.string.rapid_str),
        stringResource(R.string.bullet_str)
    )

    val selectedTab = remember { mutableIntStateOf(0) }

    LaunchedEffect(error) {
        if (error.isNotEmpty()) {
            Toast.makeText(context, error, Toast.LENGTH_SHORT).show()
            leaderBoardViewModel.cleanError()
        }
    }

    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .testTag("LeaderBoardScreen")
    ) {
        TabRow(
            modifier = Modifier
                .padding(10.dp)
                .clip(RoundedCornerShape(10.dp))
                .testTag("tabRowLeaderboard"),
            selectedTabIndex = selectedTab.intValue,
            containerColor = Color(0XFF223849),
            divider = {},
            indicator = {},
        ) {
            tabs.forEachIndexed { index, title ->

                val isSelected = selectedTab.intValue == index

                val backgroundColor by animateColorAsState(
                    targetValue = if (isSelected) Color(0XFF101B23) else Color.Transparent,
                    animationSpec = tween(durationMillis = 500, easing = EaseInQuad)
                )
                val textColor by animateColorAsState(
                    targetValue = if (isSelected) Color.White else Color.White.copy(alpha = 0.8f),
                    animationSpec = tween(durationMillis = 500, easing = EaseInQuad)
                )

                if (isSelected) {
                    Tab(
                        modifier = Modifier
                            .height(30.dp)
                            .padding(6.dp) // Padding entre tabs
                            .clip(RoundedCornerShape(8.dp)) // Bordes redondeados
                            .background(backgroundColor)
                            .animateContentSize()
                            .testTag("tab$index"),
                        selected = selectedTab.intValue == index,
                        onClick = { selectedTab.intValue = index },
                        text = {
                            Text(
                                text = title, color = textColor,
                                fontWeight = if (isSelected) FontWeight.Bold else FontWeight.Normal
                            )
                        }
                    )
                } else {
                    Tab(
                        modifier = Modifier.testTag("tab$index"),
                        selected = selectedTab.intValue == index,
                        onClick = { selectedTab.intValue = index },
                        text = { Text(text = title, color = Color.White) }
                    )
                }

            }
        }

        EditSpacer()

        when (selectedTab.intValue) {
            0 -> {
                LeaderBoardModeScreen(
                    leaderboard?.blitz,
                    controller,
                    animatedVisibilityScope = animatedVisibilityScope,
                    sharedTransitionScope = sharedTransitionScope
                )
            }

            1 -> {
                LeaderBoardModeScreen(
                    leaderboard?.rapid,
                    controller,
                    animatedVisibilityScope = animatedVisibilityScope,
                    sharedTransitionScope = sharedTransitionScope
                )
            }

            2 -> {
                LeaderBoardModeScreen(
                    leaderboard?.bullet,
                    controller,
                    animatedVisibilityScope = animatedVisibilityScope,
                    sharedTransitionScope = sharedTransitionScope
                )
            }
        }
    }

    BackHandler {}

    if (loading) {
        ChargeScreen()
    }
}

@Composable
fun LeaderBoardModeScreen(
    players: List<ProfileDataModel>?,
    controller: NavController,
    animatedVisibilityScope: AnimatedVisibilityScope,
    sharedTransitionScope: SharedTransitionScope
) {
    LazyColumn(
        modifier = Modifier
            .fillMaxSize()
            .testTag("leaderBoardScreen")
    ) {
        players?.let {
            items(players) {
                PlayerRankItem(
                    it,
                    controller = controller,
                    animatedVisibilityScope = animatedVisibilityScope,
                    sharedTransitionScope = sharedTransitionScope
                )
                EditSpacer()
            }
        }
    }
}

@Composable
fun PlayerRankItem(
    player: ProfileDataModel,
    controller: NavController,
    animatedVisibilityScope: AnimatedVisibilityScope,
    sharedTransitionScope: SharedTransitionScope
) {
    with(sharedTransitionScope) {
        Row(
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 10.dp)
                .clickable {
                    controller.navigate(DetailPlayerScreenNav(player.username!!))
                }
                .testTag("playerProfile${player.rank}"),
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically
        ) {
            Row(
                verticalAlignment = Alignment.CenterVertically
            ) {

                AsyncImage(
                    model = player.avatar,
                    contentDescription = "profile picture",
                    contentScale = ContentScale.Crop,
                    modifier = Modifier
                        .sharedElement(
                            state = rememberSharedContentState(key = "image/${player.username?.lowercase()}"),
                            animatedVisibilityScope = animatedVisibilityScope,
                            boundsTransform = { _, _ -> tween(durationMillis = 250) }
                        )
                        .size(65.dp)
                        .clip(CircleShape)
                        .border(
                            width = 1.dp,
                            color = MaterialTheme.colorScheme.onSurface,
                            shape = CircleShape
                        )
                )

                EditSpacer()

                Column {

                    Text(
                        text = player.name.takeUnless { it.isNullOrEmpty() } ?: player.username
                        ?: "",
                        fontSize = 16.sp,
                        color = MaterialTheme.colorScheme.onSurface,
                        textAlign = TextAlign.Center,
                        fontWeight = FontWeight.SemiBold,
                        modifier = Modifier.sharedElement(
                            state = rememberSharedContentState(key = "username/${player.username?.lowercase()}"),
                            animatedVisibilityScope = animatedVisibilityScope,
                            boundsTransform = { _, _ ->
                                tween(durationMillis = 250)
                            }
                        )
                    )

                    EditSpacer(2.dp)

                    Text(
                        text = "${player.score}",
                        fontSize = 14.sp,
                        color = MaterialTheme.colorScheme.primary,
                        textAlign = TextAlign.Center
                    )

                }
            }
            Text(
                "#${player.rank}", fontSize = 16.sp,
                color = MaterialTheme.colorScheme.onSurface,
                fontWeight = FontWeight.SemiBold
            )
        }
    }
}
